This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry, noting that the text on each line should not
be longer than the lines of dashes.

Al
-------------------------------------------------------------------------------

Sat Sep  8 22:33:39 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Prevented header files from being included more than once, as
	  some header files were not properly guarded against this.
	* Simplified current Makefiles by making use of `make -C` option.

Sat Sep  8 19:51:41 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added `mkMake` script to scripts directory. This new file forms
	  part of the rationalisation of the ELKS Makefile system that I
	  am undertaking, but does not impact on the current system in any
	  way. It is an important part of the rationalised Makefile system
	  though, so needs to be included.
	* Arranged Makefile such that `make elks` from ANY directory in
	  the ELKS source tree will compile the entire tree.

Thu Aug 30 19:16:22 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Rationalised ELKS Makefiles to use standard rule prototypes, with
	  elks/Makefile-rules containing all of the standard prototypes.

Tue Aug 28 11:43:35 BST 2001	Paul Nasrat <pnasrat@uk.now.com>

	* Patched ELKS CVS source to compile for SIBO.

Mon Aug 27 11:59:12 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Changed tcpdev.c to use semaphores now we have them.
	* Fixed bug in inet_read(). Should sleep again if woken up and has
	  no lock on the buffer.
	* Did some inet code cleanup
	* Some fixes to the tcp behavior.

Mon Aug 27 08:24:38 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Unfolded prototype rules in makefiles.

Sun Aug 26 21:22:43 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Rationalised elks/Makefile somewhat, ready for standardising the
	  Makefile rules throughout the ELKS source tree.
